--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -9,12 +9,11 @@ body{
     background-repeat: no-repeat;
     background-size:cover;
     background-attachment: fixed;
-    overflow: hidden;
 }
 
 
 .top-menu{
-    margin-top: 1em;
+    margin-top: 1.2em;
     list-style: none;
     text-align: center;
 }
@@ -26,9 +25,6 @@ body{
     display: inline-block;
     
 }
-
-
-
 
 .top-menu li a{
     text-decoration: none;
@@ -95,12 +91,12 @@ body{
     background-color: transparent;
     border-radius: 50px;
     text-decoration: none;
-    border: 2px solid #ECEAEA;
+    border: 3px solid #ECEAEA;
     transition: 0.5s;
 }
 
 .home-title-text a:hover{
-    background-color: #FFFFFF;
+    background-color: #ECEAEA;
     color: #262626;
 }
 
@@ -111,15 +107,19 @@ body{
 }
 
 .hello-hand{
-    text-align: center;
+    text-align: right;
+    padding-right: 20%;
 }
 
 .hello-hand img{
     height: auto;
-    max-width: 90px;
+    max-width: 130px;
 }
 
 @media only screen and (min-width: 1024px) {
+    body{
+        overflow: hidden;
+    }
 
     .top-menu li{
         font-size: 1.3em;
@@ -140,11 +140,6 @@ body{
 
     .home-title-text a{
         font-size: 1.3em;
-    }
-
-    .hello-hand{
-        text-align: right;
-        padding-right: 20%;
     }
 
     .hello-hand img{
