--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -22,7 +22,7 @@
     <div class="home-title-text">
         <h1>Hi, I'm Alan Muñoz,<br><span>a Software Engineer</span></h1>
         <div class="descr-container">
-            <p>I’m excited to bring solutions through technology and develop innovation in many areas. Let's work together!.</p>
+            <p>I’m excited to bring solutions through technology and develop innovation in many areas. Let's work together!</p>
         </div>
         <a href="{{ url_for('work')}}">see my work</a>
     </div>
