--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,6 +16,7 @@
     <li><a href="{{ url_for('hobbies')}}">hobbies</a></li>
     <li><a href="{{ url_for('education')}}">education</a></li>
     <li><a href="{{ url_for('travel')}}">traveling</a></li>
+    <li><a href="{{ url_for('timeline')}}">timeline</a></li>
 </div>
 
 <div class="home" id="home">
