--- a/app/templates/timeline.html
+++ b/app/templates/timeline.html
@@ -26,7 +26,7 @@
 
     <div class="form">
         <form id="dataForm">
-            <h3>Fill the fields to <br>create a post</h3>
+            <h3 class="form-text">Fill the fields to <br>create a post</h3>
             <div class="field">
                 <label for="inputName">Name</label>
                 <input name="name" type="text">
