--- a/app/templates/timeline.html
+++ b/app/templates/timeline.html
@@ -64,11 +64,11 @@
             body: payload,
             })
             .then(res => res.json())
-            .then(data => console.log(data))
-
-        location.reload();
+            .then(data => {
+                console.log(data)
+                location.reload()
+            })
     })
-
     fetch('http://alanmunoz.duckdns.org:5000/api/timeline_post', {
         method: 'GET',
         })
