added part 2 of tests

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block head %}
 <!--Here goes the title of the page -->
-<title>Portfolio MLH</title>
+<title>MLH Fellow</title>
 <link rel="stylesheet" href='./static/css/index.css'>
 {% endblock %}
 
