--- a/app/templates/timeline.html
+++ b/app/templates/timeline.html
@@ -59,7 +59,7 @@
 
         const payload = new FormData(form);
         console.log([...payload])
-        fetch('http://alanmunoz.duckdns.org:5000/api/timeline_post', {
+        fetch('/api/timeline_post', {
             method: 'POST',
             body: payload,
             })
@@ -69,7 +69,7 @@
                 location.reload()
             })
     })
-    fetch('http://alanmunoz.duckdns.org:5000/api/timeline_post', {
+    fetch('/api/timeline_post', {
         method: 'GET',
         })
         .then(res => res.json())
