--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -37,7 +37,11 @@
 <div class="about">
     <div class="info">
         <h1>About Me</h1>
-        <p>I'm a 20 year old developer from Mexico. My main focus is to expand my knowledge of Algorithms, Data Science, Production Engineering and ML through projects and programs.</p>
+        <div class="text-pic">
+            <img src="./static/img/AlanMunoz.jpg">
+            <p>I'm a 20 year old developer from Mexico. My main focus is to expand my knowledge of Algorithms, Data Science, Production Engineering and ML through projects and programs.</p>
+        </div>
+        
     </div>
     <div class="socials">
         <a href="https://www.linkedin.com/in/alan-jose-mu%C3%B1oz-ram%C3%ADrez-0296a71a5/"><img src="./static/img/linkedIn.png"></a>
