--- a/app/templates/work.html
+++ b/app/templates/work.html
@@ -9,14 +9,13 @@
 {% block body %}
 
 <div class="top-menu">
-    <ul>
-        <li><a href="{{ url_for('index')}}">home</a></li>
-        <li><a href="{{ url_for('aboutme')}}">about</a></li>
-        <li id="w"><a href="{{ url_for('work')}}">work</a></li>
-        <li><a href="{{ url_for('hobbies')}}">hobbies</a></li>
-        <li><a href="{{ url_for('education')}}">education</a></li>
-        <li><a href="{{ url_for('travel')}}">traveling</a></li> 
-    </ul>
+    <li><a href="{{ url_for('index')}}">home</a></li>
+    <li><a href="{{ url_for('aboutme')}}">about</a></li>
+    <li id="selected"><a href="{{ url_for('work')}}">work</a></li>
+    <li><a href="{{ url_for('hobbies')}}">hobbies</a></li>
+    <!--<li><a href="{{ url_for('education')}}">education</a></li>-->
+    <!--<li><a href="{{ url_for('travel')}}">traveling</a></li>-->
+    <li><a href="{{ url_for('timeline')}}">timeline</a></li>
 </div>
 
 <div class="title">
@@ -29,7 +28,9 @@
     {% for experience in work %}
         <div class="project-card">
             <div class="image-container">
-                <img src="{{ experience.picture }}">
+                <div class="projectImg">
+                    <img src="{{ experience.picture }}">
+                </div>
             </div>
             <div class="project-descr">
                 <p>{{ experience.description }}</p>
