--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -1,12 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@200;600;300&display=swap');
+/*@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@200;600;300&display=swap');*/
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@200&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@300;400;600&display=swap');
 
 body{
     margin: 0;
-}
-.home-body{
     background: url("./bg-index.jpg");
     background-position: center;
     background-repeat: no-repeat;
@@ -14,12 +12,18 @@ body{
     background-attachment: fixed;
     padding-top: 1.2em;
 }
-
+/*
 .top-menu{
     margin:0;
     list-style: none;
     text-align: center;
     background-color: #E9E9E9;
+}
+*/
+.top-menu{
+    margin-top: 1.2em;
+    list-style: none;
+    text-align: center;
 }
 
 .top-menu li{
@@ -32,7 +36,7 @@ body{
 
 .top-menu li a{
     text-decoration: none;
-    color: #080808;
+    color: #F5F5F5;
     transition: 0.3s;
 }
 
@@ -40,7 +44,7 @@ body{
     color: #445BF4;
 }
 
-.top-menu #h{
+.top-menu #selected{
     font-weight: 700;
     color: #FEFEFF;
     text-decoration: underline;
@@ -72,9 +76,10 @@ body{
     font-family: 'Inconsolata', sans-serif;
     font-weight: 300;
 }
-
-.descr-container p{
+p{
     font-family: 'DM Sans', sans-serif;
+}
+.descr-container p{
     font-size: 1.4em;
     margin-bottom: 3em;
     align-items: center;
