--- a/app/static/css/work.css
+++ b/app/static/css/work.css
@@ -1,43 +1,58 @@
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@200;600;300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@300;400;600&display=swap');
 
 body {
-    background-color: #F5F5F5;
+    margin: 0;
+    background: url("./bg-work.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size:cover;
+    background-attachment: fixed;
+    padding-top: 1.2em;
+    color: #F5F5F5
 }
 
-.top-menu ul{
+.top-menu{
+    margin-top: 1.2em;
     list-style: none;
     text-align: center;
 }
 
 .top-menu li{
     font-family: 'DM Sans', sans-serif;
-    font-size: 1.5em;
-    margin: 2em 3em 1em 1em;
+    font-size: 1em;
+    margin: 1em 3em 1em 3em;
     display: inline-block;
+    
 }
 
 .top-menu li a{
     text-decoration: none;
-    color: #588157;
+    color: #F5F5F5;
+    transition: 0.3s;
 }
 
-.top-menu ul #h, .top-menu ul #w a{
+.top-menu li a:hover{
+    color: #445BF4;
+}
+
+.top-menu #selected{
     font-weight: 700;
-    color: #344E41;
+    color: #FEFEFF;
+    text-decoration: underline;
 }
 
 .title h1{
     text-align: center;
-    font-family: 'Work Sans', sans-serif;
+    font-family: 'Inconsolata', monospace;
     font-weight: 600;
-    font-size: 3.5em;
+    font-size: 3em;
 }
 
 .title span{
     text-align: center;
-    font-family: 'Work Sans', sans-serif;
+    font-family: 'Inconsolata', monospace;
     font-weight: 300;
 }
 
@@ -49,25 +64,25 @@ body {
 
 .project-card{
     width: 20em;
-    height: 25em;
-    /*
+    height: 26em;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
-    */
-    background-color: #344E41;
+    background: rgba(250, 250, 250, 0.636);
     margin: 2em 3em 0 3em;
     display: inline-block;
-    /*box-shadow: 0px 5px 8px #888888;*/
+    margin-bottom: 2em;
 }
 .project-card .image-container{
-    text-align: center;
-    background-color: #F5F5F5;
-    border-top: 2px solid #588157;
-    border-left: 2px solid #588157;
-    border-right: 2px solid #588157;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #f2f2f2;
+    height: 15em;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
 }
 
-.project-card img{
+.project-card .image-container img{
     width: 60%;
     height:auto;
     padding: 1em 1em 1em 1em;
@@ -78,13 +93,16 @@ body {
     border: none;
 }
 
+
+
 p{
     text-align: left;
     font-family: 'Plus Jakarta Sans', sans-serif;
     font-size: 1em;
     padding: 0  2em 0 2em;
-    color: #EDF2F4;
+    color: #000000;
     margin-bottom: 2em;
+    line-height: 1.3em;
 }
 .project-card .button-github{
     text-align: left;
@@ -96,8 +114,29 @@ p{
     font-family: 'DM Sans', sans-serif;
     font-weight: 400;
     font-size: 1em;
-    color: #000000;
+    color: #f6f6f6;
     padding: 0.5em 0.5em 0.5em 0.5em;
-    background-color: #D9D9D9;
+    background-color: #004FC5;
     border-radius: 50px;
+}
+
+@media only screen and (min-width: 768px) {
+
+    .top-menu li{
+        font-size: 1.3em;
+    }
+
+    .title h1{
+        font-size: 4em;
+    }
+
+    .project-card{
+        width: 20em;
+        height: 27em;
+    }
+
+    .project-card .project-descr{
+        font-size: 1.1em;
+
+    }
 }
