--- a/app/templates/aboutme.html
+++ b/app/templates/aboutme.html
@@ -9,14 +9,13 @@
 {% block body %}
 
 <div class="top-menu">
-    <ul>
-        <li><a href="{{ url_for('index')}}">home</a></li>
-        <li id="a"><a href="{{ url_for('aboutme')}}">about</a></li>
-        <li><a href="{{ url_for('work')}}">work</a></li>
-        <li><a href="{{ url_for('hobbies')}}">hobbies</a></li>
-        <li><a href="{{ url_for('education')}}">education</a></li>
-        <li><a href="{{ url_for('travel')}}">traveling</a></li>
-    </ul>
+    <li><a href="{{ url_for('index')}}">home</a></li>
+    <li id="selected"><a href="{{ url_for('aboutme')}}">about</a></li>
+    <li><a href="{{ url_for('work')}}">work</a></li>
+    <li><a href="{{ url_for('hobbies')}}">hobbies</a></li>
+    <!--<li><a href="{{ url_for('education')}}">education</a></li>-->
+    <!--<li><a href="{{ url_for('travel')}}">traveling</a></li>-->
+    <li><a href="{{ url_for('timeline')}}">timeline</a></li>
 </div>
 
 
@@ -24,21 +23,26 @@
     <div class="aboutMe-left-text">
         <h1>A little bit <br><span>about me 👋</span></h1>
         
-        <h2> I am always looking to work on<br>exciting and innovative ideas.<br>Bringing them to the market<br>is what is strive for at<br>every level.</h2>
-        <br>
-        <h2>I am particularly interested<br>in software that makes people's<br>lives easier, cheaper, and of<br>higher quality</h2>
+        <p>I'm a 20 year old computer science student at Mexico, my 
+        interests are Data Science, Machine Learning, AI, Web Development, IoT, 
+        Site Reliability and DevOps.<br>I aim to create software that is useful and
+        impactful on people's lives, making them easier, and efficient. One of my
+        greatest joys is learning new things and getting to create projects and 
+        solutions to problems that require technology and development.</p>
     </div>
 
-    <div class="aboutMe-gallery">
-        <div class="grid-imgs">
-            <img src="./static/img/flowers.jpeg" alt="">
-            <img src="./static/img/books.jpeg" alt="">
-            <img src="./static/img/travel.jpeg" alt="">
-            <img src="./static/img/turtle.jpeg" alt="">
-        </div>
-
+    <div class="connect">
+        <h2>Let's connect</h2>
+        <a href="https://www.linkedin.com/in/alan-jose-mu%C3%B1oz-ram%C3%ADrez-0296a71a5/"><img src="./static/img/linkedin.png"></a>
+        <a href="https://github.com/alanjmr21"><img src="./static/img/github.png"></a>
     </div>
+
 </div>
 
+<!--
+<img src="./static/img/books.jpeg" alt="">
+<img src="./static/img/travel.jpeg" alt="">
+<img src="./static/img/turtle.jpeg" alt="">
+-->
 
 {% endblock %}
