--- a/app/templates/hobbies.html
+++ b/app/templates/hobbies.html
@@ -7,20 +7,19 @@
 
 {% block body %}
 <div class="top-menu">
-    <ul>
-        <li><a href="{{ url_for('index')}}">home</a></li>
-        <li><a href="{{ url_for('aboutme')}}">about</a></li>
-        <li><a href="{{ url_for('work')}}">work</a></li>
-        <li id = "w"><a href="{{ url_for('hobbies')}}">hobbies</a></li>
-        <li><a href="{{ url_for('education')}}">education</a></li>
-        <li><a href="{{ url_for('travel')}}">traveling</a></li> 
-    </ul>
+    <li><a href="{{ url_for('index')}}">home</a></li>
+    <li><a href="{{ url_for('aboutme')}}">about</a></li>
+    <li><a href="{{ url_for('work')}}">work</a></li>
+    <li id="selected"><a href="{{ url_for('hobbies')}}">hobbies</a></li>
+    <!--<li><a href="{{ url_for('education')}}">education</a></li>-->
+    <!--<li><a href="{{ url_for('travel')}}">traveling</a></li>-->
+    <li><a href="{{ url_for('timeline')}}">timeline</a></li>
 </div>
 
 <div class="home">
     <div class="home-header">
         <h1>Things I do<span> in my free time 🕑</span></h1>
-        <h2> after a day of squashing bugs, my interests include </h2>
+        <p> after a day of squashing bugs, my interests include </p>
     </div>
 
 </div>
