--- a/app/templates/timeline.html
+++ b/app/templates/timeline.html
@@ -10,11 +10,11 @@
 
 <div class="top-menu">
     <li><a href="{{ url_for('index')}}">home</a></li>
-    <!--<li><a href="{{ url_for('aboutme')}}">about</a></li>
+    <li><a href="{{ url_for('aboutme')}}">about</a></li>
     <li><a href="{{ url_for('work')}}">work</a></li>
     <li><a href="{{ url_for('hobbies')}}">hobbies</a></li>
-    <li><a href="{{ url_for('education')}}">education</a></li>
-    <li><a href="{{ url_for('travel')}}">traveling</a></li>-->
+    <!--<li><a href="{{ url_for('education')}}">education</a></li>-->
+    <!--<li><a href="{{ url_for('travel')}}">traveling</a></li>-->
     <li id="h"><a href="{{ url_for('timeline')}}">timeline</a></li>
 </div>
 
