--- a/app/templates/aboutme.html
+++ b/app/templates/aboutme.html
@@ -33,7 +33,7 @@
 
     <div class="connect">
         <h2>Let's connect</h2>
-        <a href="https://www.linkedin.com/in/alan-jose-mu%C3%B1oz-ram%C3%ADrez-0296a71a5/"><img src="./static/img/linkedin.png"></a>
+        <a href="https://www.linkedin.com/in/alan-jose-mu%C3%B1oz-ram%C3%ADrez-0296a71a5/"><img src="./static/img/linkedIn.png"></a>
         <a href="https://github.com/alanjmr21"><img src="./static/img/github.png"></a>
     </div>
 
